# TCP-gateway

./: README.md
Projects/TDP/: CMakeLists.txt  gateway  trader
Projects/TDP/benchmark/: benchmark_client.cpp
Projects/TDP/client/: trader_client.cpp
Projects/TDP/metrics/: latency_tracker.cpp  latency_tracker.hpp
Projects/TDP/network/: connection.cpp  connection.hpp  io_request.hpp  io_uring.cpp  io_uring.hpp  socket.cpp  socket.hpp
Projects/TDP/protocol/: order.hpp  response.hpp
Projects/TDP/server/: gateway.cpp
Projects/TDP/validation/: validator.cpp  validator.hpp
proj/: CMakeLists.txt
proj/benchmark/: benchmark_client.cpp
proj/include/: spsc_queue.hpp
proj/src/: main.cpp
proj/src/engine/: strategy.cpp  strategy.hpp
proj/src/network/: connection.cpp  connection.hpp  io_request.hpp  io_uring.cpp  io_uring.hpp  tcp_server.cpp  tcp_server.hpp
proj/src/protocol/: order.hpp  response.hpp
